--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space - Fia</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    
     <!--Estilos del Site-->
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap  -->
@@ -15,6 +17,25 @@
 </head>
 <body>
     
+    <div id="page">
+        <nav class="nav-princ">
+            <div class="space-container">
+                <div class="row">
+                    <div class="col-sm-2 col-xs-12">
+                        <div id="space-logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+                    </div>
+                    <div class="col-xs-10 text-right menu-1 main-nav">
+                        <ul>
+                            <li class="active"><a href="#" data-nav-section="home">Inicio</a></li>
+                            <li><a href="#" data-nav-section="nosotros">Nosotros</a></li>
+                            <li><a href="#" data-nav-section="servicios">Servicios</a></li>
+                            <li><a href="#" data-nav-section="contacto">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
 
 
 
