--- a/Inicio.html
+++ b/Inicio.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Inicio">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Inicio.html" data-home-page-title="Inicio" class="u-body"><header class="u-clearfix u-header" id="sec-283c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header" id="sec-283c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1600" data-image-height="900">
           <img src="images/Blockchain2.png" class="u-logo-image u-logo-image-1">
         </a>
